home.css
html, body {
    margin: 0;
}

body {
    background: white;
}

#page-container {
    position: relative;
    min-height: 100vh;
}

#content-wrap {
    padding-bottom: 200px;
}

header {
    margin: 0;
    /* position: fixed; */
    background-color: transparent;
    height: 10vh;
}

.header-nav {
    /* background: #F0EAE5; */
    /* background: linear-gradient(to bottom, #003049, #F2F2F2); */
    display: flex;
    flex-direction: row;
    /* position: sticky; */
    justify-content: space-around;
    align-content: space-around;
    height: 10vh;
    /* line-height: 10vh; */
}

.header-button {
    /* background: rgba(71, 81, 81, 0.89);
    border: none;
    color: white;
    width: 200px;
    line-height: 50px;
    padding: 2px;
    text-align: center;
    border-radius: 3px;
    transition-duration: 0.3s;
    margin-inline: 15px;
    margin-block: 15px; */

    display: inline-block;
    padding: 1% 0;
    margin: 1%;
    /* background-color: #BF5C23; */
    background-color: transparent;
    color: black;
    text-decoration: none;
    border-radius: 7px;
    /* margin-block: 15px; */
    text-align: center;
    /* margin-inline: 15px; */
    align-content: center;
    /* line-height: 10vh; */

    

    font-family: 'Agdasima', sans-serif;
    font-size: 125%;
    /* font-style: italic; */

    transition-duration: 0.3s;
}

.header-button:hover {
    /* background: transparent; */
    background-color: #c2672a;
    /* background: rgba(255, 58, 58, 0.35); */
    color: white;
}


/* button spacing/sizing */ 
#ab {
    flex-grow: 2;
}
#soft {
    flex-grow: 1;
}
#hard {
    flex-grow: 1;
}
#photo {
    flex-grow: 1;
}
#blog {
    flex-grow: 1;
}

/* the main part of the website */
main {
    display: grid;
    grid-template-rows: 90vh 40vh 20vh 40vh 30vh 30vh 30vh;
    grid-template-columns: auto auto auto;
    padding: 0;
    margin: 0;
}

.sect-title {
    font-family: 'Agdasima', sans-serif;
    font-size: 300%;
    color: #212529;
    margin: 0;
    padding: 3px;
}

/* assigning grid areas */
.words {
    grid-area: 1 / 1 / 2 / 4;
    /* background-color: white; */
    background-image: url("austin_sky.jpg");
    background-size: 100% auto;
    background-position-y: 25%;
    background-repeat: no-repeat;
    background-attachment: fixed;
    margin: 0;

    display: grid;
    grid-template-rows: 1fr 2fr 1fr;
    grid-template-columns: 1fr 2fr 1fr;
    gap: 1% 1%;
    justify-content: stretch;
    justify-items: stretch;
    grid-template-areas:
    "a b c"
    "d e f"
    "g h i";
}
.word {
    font-family: 'Agdasima', sans-serif;
    color: white;
    align-self: center;
    justify-self: center;
    font-size: 500%;
    /* background-color: purple; */
    transition: all 0.35s ease-in-out;
    /* text-shadow: -3px 2px 20px #343A40; */
}
.word:hover {
    /* this is pretty sick. Realistic pull forward with shadow*/
    transform: scale(1.5);
    text-shadow: -3px 2px 50px #c2672a; 
    color: #c2672a;
}

#who {
    grid-area: e;
    align-self: center;
    justify-self: center;
    text-align: center;


    opacity: 1; /* Initially show the text */
    transition: opacity 1s ease; /* Add a transition effect */
    font-family: 'Agdasima', sans-serif;
    font-size: 125%;
    padding: 10px;
    color: black;
    background-color: rgba(255, 255, 255, 0.719);
    box-shadow: 0 0 100px rgba(255, 255, 255, 0.719);
    border-radius: 5px;
}
#who-head {
    font-size: 300%;
    justify-self: start;
    color: #c2672a;
}

#intent {
    grid-area: a;
    justify-self: end;
}
#act {
    grid-area: b;
}
#growth {
    grid-area: c;
    justify-self: start;
}
#curious {
    grid-area: d;
}
#create {
    grid-area: f;
}
#aware {
    grid-area: g;
    justify-self: end;
}
#express {
    grid-area: h;
}
#humble {
    grid-area: i;
    justify-self: start;
}

#intent-desc {
    opacity: 0; /* Initially hide the text */
    transition: opacity 1s ease; /* Add a transition effect */
}
#act-desc {
    opacity: 0; /* Initially hide the text */
    transition: opacity 1s ease; /* Add a transition effect */
}
#growth-desc {
    opacity: 0; /* Initially hide the text */
    transition: opacity 1s ease; /* Add a transition effect */
}
#curious-desc {
    opacity: 0; /* Initially hide the text */
    transition: opacity 1s ease; /* Add a transition effect */
}
#create-desc {
    opacity: 0; /* Initially hide the text */
    transition: opacity 1s ease; /* Add a transition effect */
}
#aware-desc {
    opacity: 0; /* Initially hide the text */
    transition: opacity 1s ease; /* Add a transition effect */
}
#express-desc {
    opacity: 0; /* Initially hide the text */
    transition: opacity 1s ease; /* Add a transition effect */
}
#humble-desc {
    opacity: 0; /* Initially hide the text */
    transition: opacity 1s ease; /* Add a transition effect */
}

.description {
    grid-area: e;
    align-self: center;
    justify-self: center;
    font-family: 'Agdasima', sans-serif;
    font-size: 125%;
    padding: 10px;
    text-align: center;
    color: black;
    background-color: rgba(255, 255, 255, 0.719);
    box-shadow: 0 0 100px rgba(255, 255, 255, 0.719);
    border-radius: 5px;
}


.edu {
    grid-area: 2 / 1 / 3 / 4;
    background-color: #c2672a;
    text-align: center;
    /* box-shadow: -1px -1px 15px #343a406c; */
    font-family: 'Agdasima', sans-serif;
}

.schools {
    display: flex;
    flex-direction: row; 
    justify-content: space-around;
    /* margin: 0; */
}
.school {
    /* This is so I could display the picture next to the info if the boxes are wide */
    /* display: flex; */
    background-color: white;
    border-radius: 3px;
    flex: 1 1 0;
    margin: 10px;
    padding: 10px;

    box-shadow: -8px -5px 7px #343a406c;
    line-height: 10px;

    color: #212529;
    border-style: solid;
    border-color: transparent;
}

.school:hover {
    border-color: #c2672a;
}

.school-work-photo {
    max-height: auto;
    max-width: 10%;
    border-radius: 10px;
}
.sub-head {
    font-weight: bold;
}

.skills {
    grid-area: 3 / 1 / 4 / 4;
    background-color: white; /*#0c77cf*/
    text-align: center;
    align-items: start;
    box-shadow: -1px -1px 10px #343a406c;
    font-family: 'Agdasima', sans-serif;
}
.skill-box {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    height: 50%;
    /* padding: 5%; */
    /* margin: 20px; */
    align-content: space-around;
    justify-content: center;
}
.skill {
    line-height: 5%;
    padding: 5px;
    margin: 5px;
    margin-top: 2px;
    margin-bottom: 2px;
}
.exp {
    grid-area: 4 / 1 / 5 / 4;
    background-color: #c2672a;
    text-align: center;
    box-shadow: -1px -1px 10px #343a406c;
    font-family: 'Agdasima', sans-serif;
}
.work {
    display: flex;
    flex-direction: row; 
    justify-content: space-around;
}
.job {
    background-color: white;
    border-radius: 3px;
    flex: 1 1 0;
    margin: 15px;
    padding: 20px;

    box-shadow: -8px -5px 7px #343a406c;

    border-style: solid;
    border-color: transparent;
}
.job:hover {
    border-color: #c2672a;
}
.goals {
    grid-area: 5 / 1 / 6 / 4;
    background-color: #CED4DA;
    text-align: center;
    box-shadow: -1px -1px 10px #343a406c;
}
.certifications {
    grid-area: 6 / 1 / 7 / 4;
    background-color: #0c77cf;
    text-align: center;
    box-shadow: -1px -1px 10px #343a406c;
}
.awards {
    grid-area: 7 / 1 / 8 / 4;
    background-color: #6C757D;
    text-align: center;
    box-shadow: -1px -1px 10px #343a406c;
}

